completed the data structure by adding reset of the properties

--- a/US300/json_dat/.vscode/settings.json
+++ b/US300/json_dat/.vscode/settings.json
@@ -40,6 +40,10 @@
         "tuple": "cpp",
         "typeinfo": "cpp",
         "utility": "cpp",
-        "string": "cpp"
+        "string": "cpp",
+        "atomic": "cpp",
+        "strstream": "cpp",
+        "cinttypes": "cpp",
+        "typeindex": "cpp"
     }
 }
